[gd_scene load_steps=6 format=2]

[ext_resource path="res://spider/spider.png" type="Texture" id=1]
[ext_resource path="res://spider/spider.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="spider" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "idle"

[node name="jump_input_timer" type="Timer" parent="."]

[node name="coyote_timer" type="Timer" parent="."]

[node name="web" type="Line2D" parent="."]
width = 2.0
default_color = Color( 1, 1, 1, 1 )

[node name="web_raycast" type="RayCast2D" parent="."]
